Fixed include property of tsconfig.app.json inside project-manager-api folder

--- a/apps/project-manager-api/tsconfig.app.json
+++ b/apps/project-manager-api/tsconfig.app.json
@@ -5,7 +5,7 @@
     "outDir": "../../dist/apps/project-manager-api"
   },
   "include": [
-    "@project-manager-api/**/*"
+    "src/**/*"
   ],
   "exclude": [
     "node_modules",
